<?xml version="1.0" encoding="utf-8"?>
<!-- Корневой контейнер с ConstraintLayout -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Заголовок экрана -->
    <TextView
        android:id="@+id/textResponses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/responses"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Кнопка перехода к ViewPager -->
    <Button
        android:id="@+id/bntViewPager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/viewpager"
        app:layout_constraintEnd_toEndOf="@+id/textResponses"
        app:layout_constraintStart_toStartOf="@+id/textResponses"
        app:layout_constraintTop_toBottomOf="@+id/textResponses" />

    <!-- Кнопка перехода к NestedFlow -->
    <Button
        android:id="@+id/bntNestedFlow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/nested_flow"
        app:layout_constraintEnd_toEndOf="@+id/bntViewPager"
        app:layout_constraintStart_toStartOf="@+id/bntViewPager"
        app:layout_constraintTop_toBottomOf="@+id/bntViewPager" />
</androidx.constraintlayout.widget.ConstraintLayout>